--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,3 +56,19 @@ header {
   color: white;
   padding: 5px;
 }
+
+#rev-div {
+  padding: 2rem;
+  margin:2rem;
+  border: 3px solid black;
+  text-align: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  width: 40vw;
+}
