--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,14 @@ svg {
   display: block;
 }
 
+p, h1, h2, h3, h4 {
+  color: black;
+}
+
+h1.head {
+  color: white;
+}
+
 h1 {
   font-size: 2rem;;
 }
