--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-
+/* 
 * {
   box-sizing: border-box;
   margin: 0;
@@ -86,4 +86,39 @@ footer {
   padding: 2rem;
   margin-top: 66vh;
   text-align: center;
+} */
+
+* {
+  text-align: center;
+}
+
+img {
+  height: 200px;
+  width: 200px;
+}
+
+#artSug {
+  margin: 2rem;
+  text-align: center;
+}
+
+.albumContainer {
+  border: 3px solid black;
+  margin: 1rem;
+  padding: 2rem;
+  border-radius: 50%;
+  margin-left: 33vw;
+  margin-right: 33vw;
+  height: 40vh;
+  margin-top: 20vh;
+}
+
+#rev-div {
+  border: 3px solid black;
+  margin: 1rem;
+  padding: 2rem;
+  border-radius: 50%;
+  margin-left: 33vw;
+  margin-right: 33vw;
+  height: 40vh;
 }
