--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,22 @@
 
 * {
-  box-sizing: border-box;
   margin: 0;
-  padding: 0;
+  color: black;
+  
+}
+
+
+.cl-userButtonTrigger {
+  margin-left: 30px;
+  margin-top: 1px;
+
 }
 
 body {
+  
   font-family: system-ui;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background-image: linear-gradient(
     330deg,
     hsl(0, 0%, 100%) 0%,
@@ -20,8 +28,23 @@ svg {
   display: block;
 }
 
-p, h1, h2, h3, h4 {
+p, h1, h3, h4 {
   color: black;
+}
+
+
+.links  {
+  margin-left: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.clerkbutton {
+  display: flex;
+  flex-direction: row;
+  margin-top: 1px;
 }
 
 h1.head {
@@ -32,8 +55,33 @@ h1 {
   font-size: 2rem;;
 }
 
-h2 {
-  margin-bottom: 40px;
+.homepage {
+ margin-top: 20px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+}
+
+.homeimage {
+  position: relative;
+}
+
+.homebg {
+  opacity: 0.4;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  
+  height: 600px;
+}
+
+.homecontent {
+  position: relative;
+  margin-left: 40px;
+  color: black;
+  font-size: large;
+  font-weight: 900;
 }
 
 p {
@@ -48,11 +96,14 @@ p {
 
 
 header {
+  display: flex;
+  justify-content: start;
   width: 100%;
-  height: 5rem;
+  height: 3rem;
   background-color: #07030d;
   color: white;
-  text-align: center;
+
+  margin-left: 1px;
   padding-top: 1rem;
 }
 
@@ -63,6 +114,7 @@ header {
   color: white;
   padding: 5px;
 }
+
 
 #rev-div {
   padding: 2rem;
@@ -81,9 +133,12 @@ form {
 }
 
 footer {
+  height: 20px;
   background-color: black;
   color: aliceblue;
-  padding: 2rem;
-  margin-top: 66vh;
-  text-align: center;
+  padding: 5px;
+  margin-top: 600px;
+  margin-left: 1px;
+  
+  
 }
