--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@ svg {
 }
 
 p, h1, h2, h3, h4 {
-  color: black;
+  color: #0d0d0d;
 }
 
 h1.head {
@@ -50,7 +50,7 @@ p {
 header {
   width: 100%;
   height: 5rem;
-  background-color: #07030d;
+  background-color: #181818;
   color: white;
   text-align: center;
   padding-top: 1rem;
@@ -64,7 +64,7 @@ header {
   padding: 5px;
 }
 
-#rev-div {
+.rev-div {
   padding: 2rem;
   margin:2rem;
   border: 3px solid black;
@@ -87,3 +87,153 @@ footer {
   margin-top: 66vh;
   text-align: center;
 }
+
+
+/* Danny's extra css */
+
+h3.rev {
+  color: #eaeaea;
+  font-size: 0.95rem;
+  margin-bottom: 0.5rem;
+  font-weight: normal;
+}
+
+p.rev {
+  color: #eaeaea;
+}
+
+label.rev{
+  color: #eaeaea;
+}
+
+h3.title {
+  color: #0d0d0d;
+  font-size: 1rem;
+  font-weight: normal;
+}
+
+p.content {
+  color: #0d0d0d;
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.rev-form {
+  display: inline-block;
+  align-items: left;
+  width: 100%;
+  background-color: #0d0d0d;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  border-radius: 8px;
+  padding: 20px;
+}
+
+a.rev {
+  text-decoration: none;
+}
+
+input.rev, textarea.rev {
+  width: 100%;
+  height: 1.5rem;
+  background-color: #eaeaea;
+  border: 1px solid grey;
+  border-radius: 6px;
+  margin-top: 5px;
+  padding-left: 4px;
+}
+
+.wrap-textarea {
+  width: 100%;
+}
+
+textarea.text-max-wide{
+  width: 100%;
+}
+
+
+button.review {
+  font-size: 0.9rem;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  height: 2rem;
+  padding: 5px;
+  background-color: #0d0d0d;
+  color: #eaeaea;
+  border-radius: 7px;
+}
+
+.dark {
+  color: #0d0d0d;
+  background-color: #eaeaea;
+  border: 1px #eaeaea solid;
+}
+
+.dark:hover {
+  cursor: pointer;
+  color: #eaeaea;
+  background-color: #eaeaea;
+  opacity: 0.6;
+  transition: 0.3s;
+}
+
+button.review:hover {
+  cursor: pointer;
+  background-color: #181818;
+  opacity: 0.6;
+  transition: 0.3s;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  height: 1rem;
+}
+
+li {
+  display: inline;
+  margin: 0;
+  padding: 8px 12px;
+  height: 1.5rem;
+  background-color: #181818;
+  color: #eaeaea;
+}
+
+li a:hover{
+  background-color: #202020;
+}
+
+a:link, a:visited, a:hover, a:active {
+  text-decoration: none;
+  color: #eaeaea;
+}
+
+img.icon {
+  vertical-align: bottom;
+  margin: 0;
+  padding: 0;
+}
+
+#nav-wrapper {
+  margin: 0 auto;
+  margin-bottom: 20px;
+  width: 400px;
+}
+
+.rev-compact {
+  padding: 1rem;
+  margin: 1rem;
+  border: 3px solid black;
+  text-align: center;
+}
+
+
+.clear {
+  clear: both;
+}
+/* @media screen and (max-width: 810px) {
+  body {
+    background-color: olive;
+  }
+} */
