--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,12 @@
   padding: 0;
 }
 
+.cl-userButtonTrigger {
+  margin-left: 30px;
+  margin-top: 1px;
+
+}
+
 body {
   font-family: system-ui;
   width: 100vw;
@@ -40,6 +46,50 @@ p {
   font-size: 0.875rem;
 }
 
+.links  {
+  margin-left: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.clerkbutton {
+  display: flex;
+  flex-direction: row;
+  margin-top: 1px;
+}
+
+.homepage {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+ }
+ 
+ .homeimage {
+   position: relative;
+ }
+ 
+ .homebg {
+   opacity: 0.4;
+   position: absolute;
+   left: 0;
+   top: 0;
+   width: 100%;
+   
+   height: 600px;
+ }
+ 
+ .homecontent {
+   position: relative;
+   margin-left: 40px;
+   color: black;
+   font-size: large;
+   font-weight: 900;
+ }
+
+
 #main {
   display: flex;
   align-items: flex-start;
@@ -48,11 +98,14 @@ p {
 
 
 header {
+  display: flex;
+  justify-content: start;
   width: 100%;
-  height: 5rem;
-  background-color: #181818;
+  height: 3rem;
+  background-color: #07030d;
   color: white;
-  text-align: center;
+
+  margin-left: 1px;
   padding-top: 1rem;
 }
 
@@ -81,11 +134,14 @@ form {
 }
 
 footer {
+  height: 30px;
   background-color: black;
   color: aliceblue;
-  padding: 2rem;
-  margin-top: 66vh;
-  text-align: center;
+  padding: 5px;
+  margin-top: 600px;
+  margin-left: 1px;
+  
+  
 }
 
 
