--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -233,33 +233,26 @@ img.icon {
 .clear {
   clear: both;
 }
-/* @media screen and (max-width: 810px) {
+@media screen and (max-width: 810px) {
   body {
     background-color: olive;
   }
-} */
-
-.mb-about-container {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: black;
-  padding: 2rem;
-  text-align: center;
 }
 
-.mb-about-container h2 {
-  color: bisque;
+.mb-about-container {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .mb-about-container h3 {
   font-size: 24px;
-  margin: 10px 0;
-  color: bisque;
+  margin:5px 0;
+
 }
 
 .mb-about-container p {
-  font-size: 16px;
+  font-size: 15px;
   line-height: 1.6;
-  color: bisque;
+
 }
 
 .mb-about-container a {
@@ -272,8 +265,59 @@ img.icon {
   text-decoration: underline;
 }
 
-.barCode {
-  margin-left:66%;
+
+
+.cd {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+	text-align: center;
+	perspective: 550px;
+	height: 212px;
+	padding: 2rem;
 }
 
 
+
+.cd img {
+  margin-top: 1rem;
+	height: 100px;
+	width: auto;
+}
+
+.cd .front {
+	cursor: pointer;
+	transition: opacity .2s ease;
+  transform: rotateY(25deg) translateZ(115px);
+  border: 3px solid black;
+  border-radius: 5px;
+}
+
+.homepage {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+ }
+
+ .homecontent {
+  position: relative;
+  margin-left: 40px;
+  color: black;
+  font-size: large;
+  font-weight: 900;
+}
+
+.homeimage {
+  position: relative;
+}
+
+.homebg {
+  opacity: 0.4;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  
+  height: 600px;
+}
