--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -311,6 +311,7 @@ img.icon {
   color: black;
   font-size: large;
   font-weight: 900;
+  
 }
 
 .homeimage {
@@ -325,3 +326,15 @@ img.icon {
   width: 1;
   height: 600px;
 }
+.names {
+  text-align: center;
+  background-color: aliceblue;
+  border: 3px solid black;
+  padding: 1rem;
+  margin-top: 4rem;
+  opacity: 70%;
+}
+.names h3 {
+  margin: 1rem 0;
+}
+
