--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@ body {
   font-family: system-ui;
   width: 100vw;
   height: 100vh;
-  background-color: beige;
+  background-color: #f5f5ef;
 }
 
 svg {
